src/test/ui/type-alias-impl-trait/never_reveal_concrete_type.min_tait.stderr
error[E0308]: mismatched types
  --> $DIR/never_reveal_concrete_type.rs:16:27
   |
LL | type NoReveal = impl std::fmt::Debug;
   |                 -------------------- the found opaque type
...
LL |     let _: &'static str = x;
   |            ------------   ^ expected `&str`, found opaque type
   |            |
   |            expected due to this
   |
   = note: expected reference `&'static str`
            found opaque type `impl Debug`

error[E0605]: non-primitive cast: `impl Debug` as `&'static str`
  --> $DIR/never_reveal_concrete_type.rs:17:13
   |
LL |     let _ = x as &'static str;
   |             ^^^^^^^^^^^^^^^^^ an `as` expression can only be used to convert between primitive types or to coerce to a specific trait object

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0308, E0605.
For more information about an error, try `rustc --explain E0308`.
